# base64

./: CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: main.yml
inc/: base64.h
src/: base64.c
